--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
     </nav>
 
     <div class="container-fluid pt-2">
-        <div class="mx-auto" style="width:fit-content;">
+        <div class="mx-auto" style="width:100%;">
             <h1 class="text-center pb-3">{{ header }}</h1>
             {{ content }}
         </div>
