--- a/templates/classify.html
+++ b/templates/classify.html
@@ -4,19 +4,37 @@
 {%set header%}Klasifikasi{% endset %}
 
 {%set content %}
-    <form action="/classify" method="post" enctype="multipart/form-data">
-        <div class="mb-3">
-            <label for="formFile" class="form-label">Masukkan Gambar(PNG, JPEG)</label>
-            <input class="form-control" name="image" type="file" id="formFile"accept=".png, .jpeg, .jpg" required>
+    <div class="container text-center">
+        <div class="row align-items-start">
+          <div class="col-3">
+            {%if imgs%}
+                <img src="{{imgs[0]}}" class="img-fluid img-thumbnail rounded d-block mx-auto my-5" alt="...">
+                <img src="{{imgs[1]}}" class="img-fluid img-thumbnail rounded d-block mx-auto" alt="...">
+            {%endif%}
           </div>
-        <br>
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
+          <div class="col-6">
+            <form action="/classify" method="post" enctype="multipart/form-data">
+                <div class="mb-3">
+                    <label for="formFile" class="form-label">Masukkan Gambar(PNG, JPEG)</label>
+                    <input class="form-control" name="image" type="file" id="formFile"accept=".png, .jpeg, .jpg" required>
+                  </div>
+                <br>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
 
-    {%if result%}
-    <div id="results" class="mt-5 py-1 border border-secondary rounded-2" style="background-color: #B4D4FF;">
-            <h2 class="text-center">Hasil Prediksi</h2>
-            <h3 class="text-center">{{result}}</h3>
+            {%if result%}
+                <div id="results" class="mt-5 py-1 border border-secondary rounded-2" style="background-color: #B4D4FF;">
+                    <h2 class="text-center">Hasil Prediksi</h2>
+                    <h3 class="text-center">{{result}}</h3>
+                </div>
+            {%endif%}
+          </div>
+          <div class="col-3">
+            {%if imgs%}
+                <img src="{{imgs[2]}}" class="img-fluid img-thumbnail rounded d-block mx-auto my-5" alt="...">
+                <img src="{{imgs[3]}}" class="img-fluid img-thumbnail rounded d-block mx-auto" alt="...">
+            {%endif%}
+          </div>
         </div>
-    {%endif%}
+      </div>
 {%endset%}
