update: upload file and accuracy - new page: accuracy - display upload image file in browser

--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Akurasi</a>
+                        <a class="nav-link" href="/accuracy">Akurasi</a>
                     </li>
                 </ul>
             </div>
