update: better accuracy page add: manual installation

--- a/templates/accuracy.html
+++ b/templates/accuracy.html
@@ -4,5 +4,36 @@
 {%set header%}Akurasi Model{% endset %}
 
 {%set content %}
-    <img src="./static/accuracy/conf_matrix.png" class="img-fluid img-thumbnail rounded d-block mx-auto my-5" alt="...">
+<div class="container text-center">
+    <div class="row align-items-start">
+      <div class="col-6">
+        <img src="./static/accuracy/conf_matrix.png" class="img-fluid img-thumbnail rounded d-block mx-auto my-5" alt="...">
+      </div>
+      <div class="col-6">
+        <img src="./static/accuracy/10_trained_model.png" class="img-fluid img-thumbnail rounded d-block mx-auto my-5" alt="...">
+      </div>
+      <div class="col-6">
+        <img src="./static/accuracy/train_acc.png" class="img-fluid img-thumbnail rounded d-block mx-auto my-5" alt="...">
+      </div>
+      <div class="col-6">
+        <img src="./static/accuracy/train_val.png" class="img-fluid img-thumbnail rounded d-block mx-auto my-5" alt="...">
+      </div>
+      <div class="col-12">
+        <img src="./static/accuracy/train_acc_val.png" class="img-fluid img-thumbnail rounded d-block mx-auto my-5" alt="...">
+      </div>
+      <div class="col-6">
+        <img src="./static/accuracy/loss_acc.png" class="img-fluid img-thumbnail rounded d-block mx-auto my-5" alt="...">
+      </div>
+      <div class="col-6">
+        <img src="./static/accuracy/loss_val.png" class="img-fluid img-thumbnail rounded d-block mx-auto my-5" alt="...">
+      </div>
+      <div class="col-12">
+        <img src="./static/accuracy/loss_acc_val.png" class="img-fluid img-thumbnail rounded d-block mx-auto my-5" alt="...">
+      </div>
+      <div class="col-12">
+        <img src="./static/accuracy/table.png" class="img-fluid img-thumbnail rounded d-block mx-auto my-5" alt="...">
+      </div>
+    </div>
+  </div>
+    
 {%endset%}
